# qtpy-font-widgets

./: README.md  pyproject.toml
src/qtpy_font_widgets/: __init__.py  font_dialog.py  font_widget.py
tests/: test_smoke.py
